# fishsuck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  dub.json  dub.selections.json  fishsuck  gradle.properties  settings.gradle
demo/: CMakeLists.txt  main.cpp
source/: app.d  body_.d  opengl.d  primitive.d  rectangle.d  renderer.d  shape.d  space.d
source/path/: package.d  polygon.d
source/render/: opengl.d  package.d
source/renderer/: ncurses.d  opengl.d  package.d
source/shape/: package.d  polygon.d  rectangle.d
source/util/: colour.d
src/: CMakeLists.txt
src/commonMain/kotlin/com/deflatedpickle/fishsuck/api/render/: HasModel.kt  Model.kt  Render.kt
src/commonMain/kotlin/com/deflatedpickle/fishsuck/backend/: Body.kt  Space.kt
src/commonMain/kotlin/com/deflatedpickle/fishsuck/backend/shape/: Polygon.kt  Rectangle.kt  Shape.kt
src/commonMain/kotlin/com/deflatedpickle/fishsuck/backend/util/: Cached.kt  Colour.kt  Registry.kt
src/commonMain/kotlin/com/deflatedpickle/fishsuck/frontend/: BodyModel.kt  ShapeModel.kt  SpaceModel.kt
src/jvmMain/kotlin/com/deflatedpickle/fishsuck/render/: RenderCurses.kt  RenderGLFW.kt  RenderLanterna.kt
src/main/cpp/: Body.cpp  Body.hpp  Space.cpp  Space.hpp
src/main/cpp/bounds/: BaseBounds.cpp  BaseBounds.hpp  RectangleBounds.cpp  RectangleBounds.hpp
src/main/cpp/shapes/: BaseShape.cpp  BaseShape.hpp
test/: build.gradle
test/src/main/kotlin/: main.kt
